package es.tierno.daw.trasnferdaw.model.exception;

public class BBDDException {
    
}
