@startuml exception
set separator none

class Exception{

}

package exception{
    

    class TransferDAWException{

    }

    class FicheroException{

    }
    

    class BBDDException{

    }
}




Exception <|-- TransferDAWException 

    TransferDAWException <|-- FicheroException
    TransferDAWException <|-- BBDDException


@enduml 

